fix listing directory

--- a/sudoku.html
+++ b/sudoku.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sudoku</title>
   <link rel="stylesheet" href="sudoku.css">
-  <script> src='sudoku.js'</script>
+  <script defer src="/js/sudoku.js"></script>
 </head>
 <body>
   <h1>Sudoku</h1>
@@ -16,6 +16,7 @@
   <div id="board"></div>
   <br>
   <div id="digits">
+
   </div>
 
 </body>
